--- a/employer/templates/employer/etc.html
+++ b/employer/templates/employer/etc.html
@@ -31,14 +31,14 @@
 <div class="container">
 <nav id="bo_cate">
             <ul>
-                <li><a href=""id="bo_cate_on">전체</a></li>
+                <li><a href="/employer/">전체</a></li>
                 <li><a href="/employer/home/">집안일</a></li>
                 <li><a href="/employer/load/">짐 옮기기</a></li>
                 <li><a href="/employer/pet/">펫 서비스</a></li>
                 <li><a href="/employer/acting/">역할 대행</a></li>
                 <li><a href="/employer/short/">단거리 배달</a></li>
                 <li><a href="/employer/carpool/">카풀</a></li>
-                <li><a href="/employer/etc/">기타</a></li>
+                <li><a href=""id="bo_cate_on">기타</a></li>
           </ul>
 </nav>
 </div>
