--- a/employer/templates/employer/load.html
+++ b/employer/templates/employer/load.html
@@ -31,9 +31,9 @@
 <div class="container">
 <nav id="bo_cate">
             <ul>
-                <li><a href=""id="bo_cate_on">전체</a></li>
+              <li><a href="/employer/">전체</a></li>
                 <li><a href="/employer/home/">집안일</a></li>
-                <li><a href="/employer/load/">짐 옮기기</a></li>
+                <li><a href=""id="bo_cate_on">짐 옮기기</a></li>
                 <li><a href="/employer/pet/">펫 서비스</a></li>
                 <li><a href="/employer/acting/">역할 대행</a></li>
                 <li><a href="/employer/short/">단거리 배달</a></li>
