--- a/employee/templates/employee/employee_list.html
+++ b/employee/templates/employee/employee_list.html
@@ -91,7 +91,9 @@
         </tr></table>
     </div>
     {% endfor %}
+    <hr>
 </div>
+
 <br>
 
 <!-- 여기부터 글 페이지 이동 영역-->
@@ -102,14 +104,18 @@
 
     {% if posts.has_previous %}
      <a href="?page=1"> << </a>
-     <a href="?page={{posts.previous_page_number}}"> < </a><a>   </a>
-            {%endif%}
+     <a href="?page={{posts.previous_page_number}}">< </a><a>   </a>
+      {%else%}
+            <span><<</span><span><</span>
+      {%endif%}
      <span>{{posts.number}}</span>
      <span>/</span>
      <span>{{posts.paginator.num_pages}}</span>
      {% if posts.has_next %}
      <a href="?page={{posts.next_page_number}}"> > </a>
      <a href="?page={{posts.paginator.num_pages}}"> >> </a>
+                  {%else%}
+            <span>></span>  <span>>></span>
      {% endif %}
         </td>
 
