--- a/managing/templates/managing/FAQ.html
+++ b/managing/templates/managing/FAQ.html
@@ -55,6 +55,7 @@
         </tr></table>
     </div>
     {% endfor %}
+    <hr>
 </div>
 <br>
 
@@ -67,6 +68,8 @@
     {% if posts.has_previous %}
      <a href="?page=1"> << </a>
      <a href="?page={{posts.previous_page_number}}"> < </a><a>   </a>
+                  {%else%}
+            <span><<</span><span><</span>
             {%endif%}
      <span>{{posts.number}}</span>
      <span>/</span>
@@ -74,10 +77,12 @@
      {% if posts.has_next %}
      <a href="?page={{posts.next_page_number}}"> > </a>
      <a href="?page={{posts.paginator.num_pages}}"> >> </a>
+            {%else%}
+            <span>></span>  <span>>></span>
      {% endif %}
         </td>
-
-
+        <td style="width:25%;">
+        </td>
     </tr></table>
 </div>
 
