--- a/employee/templates/employee/edit_feed.html
+++ b/employee/templates/employee/edit_feed.html
@@ -31,7 +31,9 @@ appearance: none;
                 <td><b>작성자 </b></td>
                 <td>{{user.id}}</td>
             </tr>
-                    <tr>
+
+            #카테고리
+            <tr>
                 <td><b>카테고리 </b></td>
                 <td>
                 <select name="menuid">
