--- a/employee/templates/employee/short.html
+++ b/employee/templates/employee/short.html
@@ -27,7 +27,7 @@
     }
 
 </style>
-
+#카테고리 분류
 <div class="container">
 <nav id="bo_cate">
             <ul>
@@ -42,7 +42,7 @@
           </ul>
 </nav>
 </div>
-
+#게시판 표시 정보
 <div class="container">
     <table style="width:100%"><tr class="list_emp">
         <td style="width:10%">글 번호</td>
@@ -54,20 +54,14 @@
     </tr>
     </table>
 </div>
-
+#게시글 포스팅
 <div class="container">
     <script>i=0</script>
+    #views.py에서 5개씩 1페이지로 만들어 게시판에 게시
     {% for feed in posts %}
-
+    #feed로 model.py에서 설정한 값들을 불러 들어옴
     <div class="feed" >
         <table style="width:100%;height:'';"><tr>
-            <td style="width:10%">
-                <script language="JavaScript">
-                i++
-                document.write(i);
-                i++
-                </script>
-            </td>
             <td style="width:10%">
                 <a class="menuid">{{ feed.menuid }}</a>
             </td>
@@ -111,7 +105,7 @@
      <a href="?page={{posts.paginator.num_pages}}"> >> </a>
      {% endif %}
         </td>
-
+        #글쓰기 버튼
         <td style="width:25%;">
             <a href="/employee/new" style="float:right"><div class="menu" >글쓰기</div></a>
         </td>
