--- a/employer/templates/employer/employer_list.html
+++ b/employer/templates/employer/employer_list.html
@@ -103,6 +103,8 @@
     {% if posts.has_previous %}
      <a href="?page=1"> << </a>
      <a href="?page={{posts.previous_page_number}}"> < </a><a>   </a>
+                  {%else%}
+            <span><<</span><span><</span>
             {%endif%}
      <span>{{posts.number}}</span>
      <span>/</span>
@@ -110,6 +112,8 @@
      {% if posts.has_next %}
      <a href="?page={{posts.next_page_number}}"> > </a>
      <a href="?page={{posts.paginator.num_pages}}"> >> </a>
+            {%else%}
+     <span>></span>  <span>>></span>
      {% endif %}
         </td>
 
