--- a/accounts/templates/accounts/delete.html
+++ b/accounts/templates/accounts/delete.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block contents %}
-
+<div class="container">
 <h1>User delete</h1>
+
 <form method="POST" action="{% url 'accounts:delete' %}">
     {% csrf_token %}
     <p>정말로 탈퇴하시겠습니까?</p>
 
     <button type="submit" class="btn btn-danger" >탈퇴</button>
 </form>
+</div>
 {% endblock %}
