--- a/employee/templates/employee/edit_feed.html
+++ b/employee/templates/employee/edit_feed.html
@@ -16,7 +16,7 @@ border-radius: 0px;
 appearance: none;
 }
 </style>
-
+#수정사항 변경
 <div class="form_box">
     <form Name="inputForm" Onsubmit="return inputChecker()" action="" method="POST">
         {% csrf_token %}
