--- a/employer/templates/employer/detail_feed.html
+++ b/employer/templates/employer/detail_feed.html
@@ -29,7 +29,7 @@
     <b>덧글</b>
 <br><br>
 </div>
-
+#게시글 수정,삭제,뒤로가기 버튼 추가
 <div class="container" style="width:100%;">
     <table style="width:100%"><tr><td>
     <a href="/employer/feed/{{ feed.pk }}/edit" style="float:left"><div class="menu" style="line-height:30px;">수정</div></a>
@@ -39,6 +39,7 @@
 </div>
 <br>
 
+#댓글기능
 <div id="disqus_thread"></div>
 <script>
 
