--- a/employee/templates/employee/employee_list.html
+++ b/employee/templates/employee/employee_list.html
@@ -27,7 +27,7 @@
     }
 
 </style>
-
+#카테고리 분류
 <div class="container">
 <nav id="bo_cate">
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 </div>
 
-
+#게시판 표시 정보
 <div class="container">
     <table style="width:100%"><tr class="list_emp">
         <td style="width:10%">글 번호</td>
@@ -55,7 +55,7 @@
     </tr>
     </table>
 </div>
-
+#게시글 포스팅
 <div class="container">
     <script>i=0</script>
     {% for feed in posts %}
@@ -118,7 +118,7 @@
             <span>></span>  <span>>></span>
      {% endif %}
         </td>
-
+        #글쓰기 버튼
         <td style="width:25%;">
             <a href="/employee/new" style="float:right"><div class="menu" >글쓰기</div></a>
         </td>
